gitops/apps/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
spec:
  type: ClusterIP
  ports:
    - port: 6767
      targetPort: bazarr
  selector:
    app: bazarr
