gitops/apps/bazarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  annotations:
    cert-manager.io/cluster-issuer: bealv
spec:
  rules:
    - host: bazarr.bealv.lan
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
  tls:
    - hosts:
        - bazarr.bealv.lan
      secretName: tls-bazarr
